Fix uncentered icons in navbar on mobile firefox

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -63,6 +63,7 @@
 
 .navbar button {
 	display: inline-flex;
+	align-items: center;
 	cursor: pointer;
 	border: 0;
 	overflow: hidden;
